frontend/test/should_fail/array_003c.grg
using model_init;

rule initializeTypeMismatch {
	a:A;

	modify {
		eval {
			def ref aa:array<B> = array<B>[ a ];
		}
	}
}
